冒险手册_书籍 整理完毕

--- a/更新记录/index.html
+++ b/更新记录/index.html
@@ -747,7 +747,7 @@
 
 <h2 id="202392">2023/9/2</h2>
 <p>显示注脚内容</p>
-<p>整理 冒险手册_书籍 的内容 3/4</p>
+<p>整理 冒险手册_书籍 的内容 整理完毕</p>
 <h2 id="202391">2023/9/1</h2>
 <p>整理完毕日文原版和中文版设定</p>
 
