--- a/游戏内资料整理/冒险手册_书籍/冒险手册_书籍/index.html
+++ b/游戏内资料整理/冒险手册_书籍/冒险手册_书籍/index.html
@@ -1831,230 +1831,229 @@
 <p>他率领军团远征，得到了众多的奴隶，</p>
 <p>还讨伐蛮族，令诸王宣誓效忠。</p>
 <p>迪多斯四世拜席巴的哲人伊库泰斯为师，</p>
-<p>他建立了汇集诸国知识的大图书馆。
-在他的引导下，智者们的才智直抵星辰。
-他统治帝国长达二百八十五年，随后自己走进了墓室。
-迪多斯五世的信仰虔诚，他将诸国的神殿集于帝都，
-每天都举行一次祭祀，奉上了大量的活祭。
-他向神明乞求如父皇般长生不死，却未得到回应，
-在六十五年的统治后被安葬于墓室。
-迪多斯六世深信自己在魔术上登峰造极堪比神明，
-因此他在墓所之上建起了祭祀自身的大神殿。
-但是后来发生叛乱时，他被逼入大神殿，在那里
-自我了断，他的统治持续了三十七年。
-迪多斯七世被诸王操纵，作为傀儡女帝登基。
-但她在不久后，就反将诸王摆布于手掌之中。
-在她的统治下法律公正无私，人民安享和平，
-但是在她治世八十六年之后，因杯中被人下毒而殒命。
-这七代的迪多斯王每一位都有如神明般优秀而伟大。
-因而七帝时代是帝国的黄金时期，
-是帝国人民最为幸福的时代。
-迪多斯八世虽然也由诸王推举为女帝，但她立即
-就翻脸杀死了多恩王，自己统治起整个帝国。
-她虽然建立亲卫队来对抗诸王，但很快也像其母帝
-一般被人毒杀，其统治仅维持两年。
-迪多斯九世为寻找杀死姐帝的真凶而癫狂，
-亲手杀掉了自己的多数臣子。
-尽管诸王和大臣们都畏惧他，他却反被人民所崇拜，
-人民称他为切碎罪恶之人、众神的皇子。
-但他的亲卫队却发生了叛乱，于宫殿走廊上
-追上并杀死了他。
-其统治时间为五年。
-迪多斯十世由先前两位有两代血缘之隔的皇帝近亲所生，
-因是异形而遭到排斥，自出生后就一直被幽闭在陵墓中。
-在要作为新帝登位被放出来的时候，
-它当即杀光了宫殿中的全部亲卫队、大臣和诸王。
-之后它在帝都中徘徊，见人就杀。
-它已成为死亡的化身，在它的杀戮之下人人平等。
-惧怕它的国民全都从帝都中出逃，诸王也纷纷反叛，
-各下属州的统帅也各自以王的身份自居。
-帝都阿格迪乌仅剩下它一个人在永远徘徊，
-最终城墙崩毁，森林逐渐覆盖于其上。
-再也没有人见过的它，由此成为了传说。
-它的统治时间不计其数。
-就这样阿尔凯亚的古王朝灭亡了，
-伟大的时代成为了过去。
-此时是阿尔凯亚的帝位空悬的时代，诸国骚动不安，
-互相争战。
-身陷不幸的人们，期待着皇帝的出现。
-作为继承皇帝血脉之人的迪多斯十一世在
-伯兰梅亚 出生，注定背负起拨乱反正的使命。
-但他却被国家放逐，作为一名战士在诸国流浪，
-吸引并统帅了诸多流浪之人。
-不久他经由始皇帝的引导找到了阿格迪乌，
-他见到帝都人民的贫困时十分悲伤，负起了王之重任。
-在他的统治下，帝都得以再兴。
-当诸国的抗争威胁到阿格迪乌之时，
-他主动起兵，令阿尔凯亚之名重兴。
-阿尔凯亚兵再次征服了诸国，
-剿灭了三大国家，令帝国重新兴盛。
-他在登位之后使用迪多斯十一世的名号，
-作为新王朝的太祖对帝国进行了长期的统治，
-他的治世持续了五十九年。
-在迪多斯十二世的统治时期，
-帝国因众多叛乱而陷入混乱。
-于是他亲率军团巡游领地，四处剿灭乱臣贼子。
-他在位的三十六年之间，从未把行宫固定在一处。
-在迪多斯十三世统治时期，因敌患消失，帝国得以安定。
-但他却建起了斗技场，令人民时刻不忘战争之心。
-他的统治持续了十八年。
-迪多斯十四世效仿古王朝的方法整顿法制，
-想要通过传播信仰给人民以智慧，
-但宦官们却阴奉阳违。
-她的统治持续了二十五年。
-迪多斯十五世并未多有作为，对民众采取放任态度。
-在他的统治下商业和神殿兴旺起来，
-大河之上尽是商船来往。
-他的统治持续了四十二年。
-新王朝仍在继续，如今在皇帝迪多斯十六世的统治下，
-古代的魔术再度复苏。
-众神啊，请守护我等的都城，守护皇帝的荣光吧！
-阿格迪乌啊，愿您永世昌盛！</p>
+<p>他建立了汇集诸国知识的大图书馆。</p>
+<p>在他的引导下，智者们的才智直抵星辰。</p>
+<p>他统治帝国长达二百八十五年，随后自己走进了墓室。</p>
+<p>迪多斯五世的信仰虔诚，他将诸国的神殿集于帝都，</p>
+<p>每天都举行一次祭祀，奉上了大量的活祭。</p>
+<p>他向神明乞求如父皇般长生不死，却未得到回应，</p>
+<p>在六十五年的统治后被安葬于墓室。</p>
+<p>迪多斯六世深信自己在魔术上登峰造极堪比神明，</p>
+<p>因此他在墓所之上建起了祭祀自身的大神殿。</p>
+<p>但是后来发生叛乱时，他被逼入大神殿，在那里</p>
+<p>自我了断，他的统治持续了三十七年。</p>
+<p>迪多斯七世被诸王操纵，作为傀儡女帝登基。</p>
+<p>但她在不久后，就反将诸王摆布于手掌之中。</p>
+<p>在她的统治下法律公正无私，人民安享和平，</p>
+<p>但是在她治世八十六年之后，因杯中被人下毒而殒命。</p>
+<p>这七代的迪多斯王每一位都有如神明般优秀而伟大。</p>
+<p>因而七帝时代是帝国的黄金时期，</p>
+<p>是帝国人民最为幸福的时代。</p>
+<p>迪多斯八世虽然也由诸王推举为女帝，但她立即</p>
+<p>就翻脸杀死了多恩王，自己统治起整个帝国。</p>
+<p>她虽然建立亲卫队来对抗诸王，但很快也像其母帝</p>
+<p>一般被人毒杀，其统治仅维持两年。</p>
+<p>迪多斯九世为寻找杀死姐帝的真凶而癫狂，</p>
+<p>亲手杀掉了自己的多数臣子。</p>
+<p>尽管诸王和大臣们都畏惧他，他却反被人民所崇拜，</p>
+<p>人民称他为切碎罪恶之人、众神的皇子。</p>
+<p>但他的亲卫队却发生了叛乱，于宫殿走廊上</p>
+<p>追上并杀死了他。</p>
+<p>其统治时间为五年。</p>
+<p>迪多斯十世由先前两位有两代血缘之隔的皇帝近亲所生，</p>
+<p>因是异形而遭到排斥，自出生后就一直被幽闭在陵墓中。</p>
+<p>在要作为新帝登位被放出来的时候，</p>
+<p>它当即杀光了宫殿中的全部亲卫队、大臣和诸王。</p>
+<p>之后它在帝都中徘徊，见人就杀。</p>
+<p>它已成为死亡的化身，在它的杀戮之下人人平等。</p>
+<p>惧怕它的国民全都从帝都中出逃，诸王也纷纷反叛，</p>
+<p>各下属州的统帅也各自以王的身份自居。</p>
+<p>帝都阿格迪乌仅剩下它一个人在永远徘徊，</p>
+<p>最终城墙崩毁，森林逐渐覆盖于其上。</p>
+<p>再也没有人见过的它，由此成为了传说。</p>
+<p>它的统治时间不计其数。</p>
+<p>就这样阿尔凯亚的古王朝灭亡了，</p>
+<p>伟大的时代成为了过去。</p>
+<p>此时是阿尔凯亚的帝位空悬的时代，诸国骚动不安，</p>
+<p>互相争战。</p>
+<p>身陷不幸的人们，期待着皇帝的出现。</p>
+<p>作为继承皇帝血脉之人的迪多斯十一世在伯兰梅亚 出生，注定背负起拨乱反正的使命。</p>
+<p>但他却被国家放逐，作为一名战士在诸国流浪，</p>
+<p>吸引并统帅了诸多流浪之人。</p>
+<p>不久他经由始皇帝的引导找到了阿格迪乌，</p>
+<p>他见到帝都人民的贫困时十分悲伤，负起了王之重任。</p>
+<p>在他的统治下，帝都得以再兴。</p>
+<p>当诸国的抗争威胁到阿格迪乌之时，</p>
+<p>他主动起兵，令阿尔凯亚之名重兴。</p>
+<p>阿尔凯亚兵再次征服了诸国，</p>
+<p>剿灭了三大国家，令帝国重新兴盛。</p>
+<p>他在登位之后使用迪多斯十一世的名号，</p>
+<p>作为新王朝的太祖对帝国进行了长期的统治，</p>
+<p>他的治世持续了五十九年。</p>
+<p>在迪多斯十二世的统治时期，</p>
+<p>帝国因众多叛乱而陷入混乱。</p>
+<p>于是他亲率军团巡游领地，四处剿灭乱臣贼子。</p>
+<p>他在位的三十六年之间，从未把行宫固定在一处。</p>
+<p>在迪多斯十三世统治时期，因敌患消失，帝国得以安定。</p>
+<p>但他却建起了斗技场，令人民时刻不忘战争之心。</p>
+<p>他的统治持续了十八年。</p>
+<p>迪多斯十四世效仿古王朝的方法整顿法制，</p>
+<p>想要通过传播信仰给人民以智慧，</p>
+<p>但宦官们却阴奉阳违。</p>
+<p>她的统治持续了二十五年。</p>
+<p>迪多斯十五世并未多有作为，对民众采取放任态度。</p>
+<p>在他的统治下商业和神殿兴旺起来，</p>
+<p>大河之上尽是商船来往。</p>
+<p>他的统治持续了四十二年。</p>
+<p>新王朝仍在继续，如今在皇帝迪多斯十六世的统治下，</p>
+<p>古代的魔术再度复苏。</p>
+<p>众神啊，请守护我等的都城，守护皇帝的荣光吧！</p>
+<p>阿格迪乌啊，愿您永世昌盛！</p>
 <hr />
 <h2 id="14">好孩子神话 1~4</h2>
 <p>～讲给好孩子们听的神话传说</p>
 <h3 id="1">１～女神的调停</h3>
-<p>很久很久以前 神明们的父亲哈鲁大神
-在打倒了古暗神龙神之后
-决定创造一个新的世界
-神明们献上祭品虔诚地祈祷
-就有一棵巨大的树木从天空的另一边落下扎根
-于是世界就牢固多了后来从大树的根部
-诞生出了大河的女神艾克薇尔
-哈鲁大神在树顶建起了神殿
-把神明们集中起来然后他说
-『让世界变得充满生命吧』
-伊波神在森林中变出了动物和妖精们
-奥罗里昂神在山中造出矮小的人
-恩伯神在海中放养了无数的鱼
-到了最后哈鲁大神造出了人类
-密尔多罗神却暗中动了手脚
-在人类的种子上施加了诅咒
-由密尔多罗神的诅咒而诞生的人类
-总是喜欢恶作剧给大家制造麻烦
-哈鲁大神发怒了把密尔多罗神关进了大树的
-底部还想把人类也全部清除掉
-但是 大河的女神艾克薇尔非常温柔
-她为人类出面调停
-『人类们如果由我来引导
-一定能成为优秀的生命』
-哈鲁大神回答道
-『那好吧
-但是作为交换为承担人类所做坏事
-的责任你也要一起被关进牢房』
-『而且如果有做了坏事的人类出现
-你必须要亲手将他毁灭』
-之后人们就于大河流域安居
-一边向女神大人祈祷一边生活了下去
-所以大家也要听从女神大人的教导
-将来一定要成为优秀的人哦</p>
+<p>很久很久以前 神明们的父亲哈鲁大神</p>
+<p>在打倒了古暗神龙神之后</p>
+<p>决定创造一个新的世界</p>
+<p>神明们献上祭品虔诚地祈祷</p>
+<p>就有一棵巨大的树木从天空的另一边落下扎根</p>
+<p>于是世界就牢固多了后来从大树的根部</p>
+<p>诞生出了大河的女神艾克薇尔</p>
+<p>哈鲁大神在树顶建起了神殿</p>
+<p>把神明们集中起来然后他说</p>
+<p>『让世界变得充满生命吧』</p>
+<p>伊波神在森林中变出了动物和妖精们</p>
+<p>奥罗里昂神在山中造出矮小的人</p>
+<p>恩伯神在海中放养了无数的鱼</p>
+<p>到了最后哈鲁大神造出了人类</p>
+<p>密尔多罗神却暗中动了手脚</p>
+<p>在人类的种子上施加了诅咒</p>
+<p>由密尔多罗神的诅咒而诞生的人类</p>
+<p>总是喜欢恶作剧给大家制造麻烦</p>
+<p>哈鲁大神发怒了把密尔多罗神关进了大树的</p>
+<p>底部还想把人类也全部清除掉</p>
+<p>但是 大河的女神艾克薇尔非常温柔</p>
+<p>她为人类出面调停</p>
+<p>『人类们如果由我来引导</p>
+<p>一定能成为优秀的生命』</p>
+<p>哈鲁大神回答道</p>
+<p>『那好吧</p>
+<p>但是作为交换为承担人类所做坏事</p>
+<p>的责任你也要一起被关进牢房』</p>
+<p>『而且如果有做了坏事的人类出现</p>
+<p>你必须要亲手将他毁灭』</p>
+<p>之后人们就于大河流域安居</p>
+<p>一边向女神大人祈祷一边生活了下去</p>
+<p>所以大家也要听从女神大人的教导</p>
+<p>将来一定要成为优秀的人哦</p>
 <h3 id="2">２～贪婪的大王</h3>
-<p>很久很久以前的人们淳朴又善良，
-妖精和小人们过着和平的日子。
-这时某个地方，一个贪婪的男人出现了。
-男人到了大河女神那里向女神乞求：
-「请给我大麦饱满的种子，我想让伙伴们的填饱肚子」
-男人把得到的种子撒在沼泽里，
-唰啦唰啦！恶鬼的军队长了出来。
-第二天男人又去向女神许愿：
-「请把火给我吧我想要做锄头和铲子。
-为了伙伴，我得挖出大块的田地」
-男人用得到的火铸成了铁，
-叮叮咣咣！
-造出了好多的武器。
-接下来的一天，男人又向女神祈愿：
-「请教我魔法，我想在碰到暴风雨、干旱的时候，保护农田」
-男人将学来的咒文反过来读，
-哗！啪啪！噼里哗啦！
-雷电、火球从天而降。
-男人拥有恶鬼的军队、铁制的武器、魔法咒文
-成为一个邪恶的大王
-他蛮横粗暴，奢华淫靡，杀光了妖精、小人和善良的人们，夺走了宝物
-人们学着他的样子都成了恶人。
-看见这幅景象的女神留下了悲伤的泪水。
-噗哗！
-泪水变成了洪水，把贪婪的男人的王国冲走了。
-从那时起我们只使用被神明所认可的魔法。
-恶王的子孙躲进了森林。</p>
+<p>很久很久以前的人们淳朴又善良，</p>
+<p>妖精和小人们过着和平的日子。</p>
+<p>这时某个地方，一个贪婪的男人出现了。</p>
+<p>男人到了大河女神那里向女神乞求：</p>
+<p>「请给我大麦饱满的种子，我想让伙伴们的填饱肚子」</p>
+<p>男人把得到的种子撒在沼泽里，</p>
+<p>唰啦唰啦！恶鬼的军队长了出来。</p>
+<p>第二天男人又去向女神许愿：</p>
+<p>「请把火给我吧我想要做锄头和铲子。</p>
+<p>为了伙伴，我得挖出大块的田地」</p>
+<p>男人用得到的火铸成了铁，</p>
+<p>叮叮咣咣！</p>
+<p>造出了好多的武器。</p>
+<p>接下来的一天，男人又向女神祈愿：</p>
+<p>「请教我魔法，我想在碰到暴风雨、干旱的时候，保护农田」</p>
+<p>男人将学来的咒文反过来读，</p>
+<p>哗！啪啪！噼里哗啦！</p>
+<p>雷电、火球从天而降。</p>
+<p>男人拥有恶鬼的军队、铁制的武器、魔法咒文</p>
+<p>成为一个邪恶的大王</p>
+<p>他蛮横粗暴，奢华淫靡，杀光了妖精、小人和善良的人们，夺走了宝物</p>
+<p>人们学着他的样子都成了恶人。</p>
+<p>看见这幅景象的女神留下了悲伤的泪水。</p>
+<p>噗哗！</p>
+<p>泪水变成了洪水，把贪婪的男人的王国冲走了。</p>
+<p>从那时起我们只使用被神明所认可的魔法。</p>
+<p>恶王的子孙躲进了森林。</p>
 <h3 id="3">３～两只方舟</h3>
-<p>女神 决定将 人类的国家毁灭
-因为 这是女神的使命
-但是她想拯救 那些心地纯洁的人类
-女神对一个叫艾鲁的男人说
-『马上 就要下大雨 城市会被毁灭
-快造出方舟 准备好』
-艾鲁 收集了很多木材
-造出巨大的方舟后 会载上
-纯洁心灵的人们 和动物
-城市里 大家都在嘲笑艾鲁
-但是 邪恶的国王明白了
-艾鲁所做的事
-国王也学着艾鲁的样子 用鞭子
-抽打着奴隶 让他们建造黑色方舟
-这段时间里 空中倾下大量的雨
-城市和山都被淹掉了
-整个世界就如同一片汪洋那样
-艾鲁建造的四角方舟 被大雨冲走
-突 突 的向着西边飘去
-持续了四十四天的漂流
-方舟卡在了山顶上 停了下来
-终于 大水退去 艾鲁来到了外面 很高兴
-在那里坐落着一座神殿 之后为人们指明道路
-这就是 尤鲁弗莱尔岛 的大神殿
-另一方面 邪恶的国王 建造的黑色方舟
-却没在再水上浮起 沉没了
-所以 现在 邪恶的国王 仍然
-沉于河底 反省着
-～完～</p>
+<p>女神 决定将 人类的国家毁灭</p>
+<p>因为 这是女神的使命</p>
+<p>但是她想拯救 那些心地纯洁的人类</p>
+<p>女神对一个叫艾鲁的男人说</p>
+<p>『马上 就要下大雨 城市会被毁灭</p>
+<p>快造出方舟 准备好』</p>
+<p>艾鲁 收集了很多木材</p>
+<p>造出巨大的方舟后 会载上</p>
+<p>纯洁心灵的人们 和动物</p>
+<p>城市里 大家都在嘲笑艾鲁</p>
+<p>但是 邪恶的国王明白了</p>
+<p>艾鲁所做的事</p>
+<p>国王也学着艾鲁的样子 用鞭子</p>
+<p>抽打着奴隶 让他们建造黑色方舟</p>
+<p>这段时间里 空中倾下大量的雨</p>
+<p>城市和山都被淹掉了</p>
+<p>整个世界就如同一片汪洋那样</p>
+<p>艾鲁建造的四角方舟 被大雨冲走</p>
+<p>突 突 的向着西边飘去</p>
+<p>持续了四十四天的漂流</p>
+<p>方舟卡在了山顶上 停了下来</p>
+<p>终于 大水退去 艾鲁来到了外面 很高兴</p>
+<p>在那里坐落着一座神殿 之后为人们指明道路</p>
+<p>这就是 尤鲁弗莱尔岛 的大神殿</p>
+<p>另一方面 邪恶的国王 建造的黑色方舟</p>
+<p>却没在再水上浮起 沉没了</p>
+<p>所以 现在 邪恶的国王 仍然</p>
+<p>沉于河底 反省着</p>
+<p>～完～</p>
 <h3 id="4">４～王子和勇士消灭魔王</h3>
-<p>听从了艾鲁的忠告被拯救的人们
-过着和平的生活
-另一方面 魔王军队 从东边的尽头过来了
-给人们带来了许多困扰
-魔王 指使 粗野的马怪 和狼群
-摧毁国家 在很长的一段时间里 逗留于此
-大家 非常困窘
-被魔王弄伤后 受伤的人
-会受到很厉害的诅咒 然后死去
-所以 谁都不敢反抗魔王
-这时 席巴国的王子 想起来反抗
-却被大家制止了
-「你要是 乱搞的话
-连我们 都会被魔王欺凌了」
-当王子犹豫的时候 国中第一的勇士
-过来对他说
-「要是这样 集合所有的国家 打倒魔王不就好了
-你 真是个胆小鬼」
-两人 大吵了一架 最后还是勇士胜了
-所以 王子集合王国间 所有的勇士
-和同伴 踏上了反抗魔王的旅程
-看到此景 哈鲁大神 非常佩服</p>
-<p>他说
-『你们真是 伟大 我就将
-能消灭魔王的剑 的下落告诉你们吧』
-得到了 可以杀死魔王的剑
-锵！ 锵！ 将剑重新锻造
-成了一把 闪闪发光的宝剑！
-王子和勇士 将魔王的军队 很轻松
-的消灭后 来到了东边的尽头
-魔王出现了 两人一起
-向着魔王发起挑战
-经过长时间的战斗后 魔王非常虚弱 他说
-「给我 最终一击的家伙 可是会中诅咒死的哟
-你们两人里 想死哪个呢」
-坏心眼的魔王 想让这两人起争执
-但是两人 没有发生争执
-「你 回国 成为王吧」
-这样说着的勇士 从王子手上夺过
-斩魔的宝剑 毫不犹豫的 刺死了魔王
-这样 魔王被终结了 而勇士
-也受到了魔王的诅咒 死去了
-王子悲痛欲绝 将斩魔的宝剑 带回去
-在尤鲁弗莱尔大神殿里 用剑做成了墓碑
-终于 王子将被魔王搞的乱七八糟的各个国家
-恢复了繁荣 被后人称为
-席瓦尔大王
-～完～</p>
+<p>听从了艾鲁的忠告被拯救的人们</p>
+<p>过着和平的生活</p>
+<p>另一方面 魔王军队 从东边的尽头过来了</p>
+<p>给人们带来了许多困扰</p>
+<p>魔王 指使 粗野的马怪 和狼群</p>
+<p>摧毁国家 在很长的一段时间里 逗留于此</p>
+<p>大家 非常困窘</p>
+<p>被魔王弄伤后 受伤的人</p>
+<p>会受到很厉害的诅咒 然后死去</p>
+<p>所以 谁都不敢反抗魔王</p>
+<p>这时 席巴国的王子 想起来反抗</p>
+<p>却被大家制止了</p>
+<p>「你要是 乱搞的话</p>
+<p>连我们 都会被魔王欺凌了」</p>
+<p>当王子犹豫的时候 国中第一的勇士</p>
+<p>过来对他说</p>
+<p>「要是这样 集合所有的国家 打倒魔王不就好了</p>
+<p>你 真是个胆小鬼」</p>
+<p>两人 大吵了一架 最后还是勇士胜了</p>
+<p>所以 王子集合王国间 所有的勇士</p>
+<p>和同伴 踏上了反抗魔王的旅程</p>
+<p>看到此景 哈鲁大神 非常佩服</p>
+<p>他说</p>
+<p>『你们真是 伟大 我就将</p>
+<p>能消灭魔王的剑 的下落告诉你们吧』</p>
+<p>得到了 可以杀死魔王的剑</p>
+<p>锵！ 锵！ 将剑重新锻造</p>
+<p>成了一把 闪闪发光的宝剑！</p>
+<p>王子和勇士 将魔王的军队 很轻松</p>
+<p>的消灭后 来到了东边的尽头</p>
+<p>魔王出现了 两人一起</p>
+<p>向着魔王发起挑战</p>
+<p>经过长时间的战斗后 魔王非常虚弱 他说</p>
+<p>「给我 最终一击的家伙 可是会中诅咒死的哟</p>
+<p>你们两人里 想死哪个呢」</p>
+<p>坏心眼的魔王 想让这两人起争执</p>
+<p>但是两人 没有发生争执</p>
+<p>「你 回国 成为王吧」</p>
+<p>这样说着的勇士 从王子手上夺过</p>
+<p>斩魔的宝剑 毫不犹豫的 刺死了魔王</p>
+<p>这样 魔王被终结了 而勇士</p>
+<p>也受到了魔王的诅咒 死去了</p>
+<p>王子悲痛欲绝 将斩魔的宝剑 带回去</p>
+<p>在尤鲁弗莱尔大神殿里 用剑做成了墓碑</p>
+<p>终于 王子将被魔王搞的乱七八糟的各个国家</p>
+<p>恢复了繁荣 被后人称为</p>
+<p>席瓦尔大王</p>
+<p>～完～</p>
 
 
 
